syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Messaging";
package CecoChat.Contracts.Messaging;
import "Messaging/DataType.proto";

service Send {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  int64 sender_id = 1;
  int64 receiver_id = 2;
  DataType data_type = 3;
  string data = 4;
}

message SendMessageResponse {
  int64 message_id = 1;
}
