syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.State";
package CecoChat.Contracts.State;

message ChatState {
  string chat_id = 1;
  int64 newest_message = 2;
  int64 other_user_delivered = 3;
  int64 other_user_seen = 4;
}
